--- a/pre-commit/action.yml
+++ b/pre-commit/action.yml
@@ -7,7 +7,7 @@ inputs:
   terraform-docs-version:
     description: Version of terraform-docs to use when evaluating checks
     required: false
-    default: v0.16.0
+    default: 'v0.16.0'
   tflint-version:
     description: Version of tflint to use when evaluating checks
     required: false
@@ -23,7 +23,7 @@ inputs:
   tfsec-version:
     description: Version of tfsec to install when `install-tfsec` is true
     required: false
-    default: 1.28.0
+    default: '1.28.0'
 
 runs:
   using: composite
