--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -13,7 +13,7 @@ env:
   TERRAFORM_VERSION: 1.0.0
   TERRAFORM_DOCS_VERSION: v0.16.0
   TFLINT_VERSION: v0.43.0
-  # TFSEC_VERSION: v1.28.1  #let's try to use the latest default version unless we find some limitation
+  TFSEC_VERSION: v1.28.1
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
