--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -1,17 +1,19 @@
 name: pre-commit
 
 on:
+  push:
+    branches:
+      - main
+    paths:
+      - '**.tf'
   pull_request:
     branches:
       - main
     paths:
       - '**.tf'
-      - '**.yml'
-      - '**.yaml'
 
 env:
   TERRAFORM_VERSION: 1.0.0
-  TERRAFORM_DOCS_VERSION: v0.16.0
   TFLINT_VERSION: v0.43.0
   TFSEC_VERSION: v1.28.1
 
@@ -27,22 +29,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - uses: dorny/paths-filter@v2
-        id: changes
-        with:
-          filters: |
-            src:
-              - '**/*.tf'
-
       - name: Config Terraform plugin cache
         if: steps.changes.outputs.src== 'true'
-        run: mkdir --parents ${{ env.TERRAFORM_DOCS_VERSION }}
+        run: |
+          echo 'plugin_cache_dir="$HOME/.terraform.d/plugin-cache"' >~/.terraformrc
+          mkdir --parents ~/.terraform.d/plugin-cache
+
+      - name: Cache Terraform
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.terraform.d/plugin-cache
+          key: ${{ runner.os }}-terraform-${{ hashFiles('**/.terraform.lock.hcl') }}
+          restore-keys: |
+            ${{ runner.os }}-terraform-
 
       - name: Pre-commit Terraform ${{ env.TERRAFORM_VERSION }}
         uses: ./pre-commit
         if: steps.changes.outputs.src== 'true'
         with:
           terraform-version: ${{ env.TERRAFORM_VERSION }}
-          terraform-docs-version: ${{ env.TERRAFORM_DOCS_VERSION }}
           tflint-version: ${{ env.TFLINT_VERSION }}
           tfsec-version: ${{ env.TFSEC_VERSION }}
