fixup! gh action for terraform-docs

--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -27,7 +27,7 @@ jobs:
         working-dir: .
         recursive: true
         recursive-path: modules
-        args: --sort-by-required
+        args: --sort-by required
         indention: 3
         git-push: "true"
         git-commit-message: "terraform-docs: automated action"
