sign off git push and remove on push since bot cannot by pass branch protection

--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -1,12 +1,6 @@
 name: Generate terraform docs
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - '**.tf'
-      - '**.md'
   pull_request:
     branches:
       - main
@@ -31,3 +25,4 @@ jobs:
         indention: 3
         git-push: "true"
         git-commit-message: "terraform-docs: automated action"
+        git-push-sign-off: "true"
