--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -15,6 +15,8 @@ jobs:
         id: actions-checkout
         with:
           ref: docs
+
+      - id: git-branch
         run: |
           generated_branch="update-docs-$(date +%s)"
           echo "generated_branch=${generated_branch}" >>$GITHUB_OUTPUT
@@ -45,4 +47,4 @@ jobs:
         if: steps.terraform-docs.outputs.num_changed == '0'
         run: |
           git checkout main
-          git branch -D ${{ steps.actions-checkout.outputs.generated_branch }}
+          git branch -D ${{ steps.git-branch.outputs.generated_branch }}
