update documentation action to open new PR

--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -3,9 +3,10 @@ name: generate-terraform-docs
 on:
   push:
     branches:
-      - test-gh-action
+      - generate-terraform-docs-test-branch
     paths:
       - '**.tf'
+
 jobs:
   tf-docs:
     name: TF docs
