--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
         id: actions-checkout
         with:
-          ref: docs
+          ref: generate-terraform-docs-test-branch
 
       - id: git-branch
         run: |
