--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -22,6 +22,7 @@ jobs:
           generated_branch="update-docs-$(date +%s)"
           echo "generated_branch=${generated_branch}" >>$GITHUB_OUTPUT
           git checkout -b $generated_branch
+          git push --set-upstream origin $generated_branch
 
       - name: Render terraform docs inside main and modules README.md files and push changes back to PR branch
         id: terraform-docs
@@ -48,4 +49,6 @@ jobs:
         if: steps.terraform-docs.outputs.num_changed == '0'
         run: |
           git checkout main
+          git push origin --delete ${{ steps.git-branch.outputs.generated_branch }}
+          git fetch -p
           git branch -D ${{ steps.git-branch.outputs.generated_branch }}
