--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -42,7 +42,7 @@ jobs:
         uses: peter-evans/create-pull-request@v4
         with:
           title: 'generate-terraform-docs: automated action'
-          branch: ${{ steps.git-branch.outputs.generated_branch }}
+          branch: 'generate-terraform-docs-test-branch'
           delete-branch: true
 
       # TODO(ocobleseqx): https://github.com/peter-evans/enable-pull-request-automerge
