--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -46,7 +46,7 @@ jobs:
           branch: ${{ steps.git-branch.outputs.generated_branch }}
           base: 'generate-terraform-docs-test-branch'
           signoff: true
-          delete-branch: true
+          delete-branch: false
 
       # TODO(ocobleseqx): https://github.com/peter-evans/enable-pull-request-automerge
 
