fixup! update documentation action to open new PR

--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -3,7 +3,7 @@ name: generate-terraform-docs
 on:
   push:
     branches:
-      - generate-terraform-docs-test-branch
+      - main
     paths:
       - '**.tf'
 
@@ -15,15 +15,16 @@ jobs:
       - uses: actions/checkout@v3
         id: actions-checkout
         with:
-          ref: docs
+          ref: main
 
       - id: git-branch
         run: |
           generated_branch="update-docs-$(date +%s)"
           echo "generated_branch=${generated_branch}" >>$GITHUB_OUTPUT
           git checkout -b $generated_branch
+          git push --set-upstream origin $generated_branch
 
-      - name: Render terraform docs inside main and modules README.md files and push changes back to PR branch
+      - name: Render terraform docs inside the main and the modules README.md files and push changes back to PR branch
         id: terraform-docs
         uses: terraform-docs/gh-actions@v1.0.0
         with:
@@ -32,15 +33,22 @@ jobs:
           recursive-path: modules
           args: --sort-by required
           indention: 3
-          git-push: "true"
-          git-commit-message: "terraform-docs: automated action"
-          git-push-sign-off: "true"
+          git-push: "false"
 
       - name: Create Pull Request
         if: steps.terraform-docs.outputs.num_changed != '0'
         uses: peter-evans/create-pull-request@v4
         with:
+          commit-message: 'generate-terraform-docs: automated action'
+          committer: GitHub <noreply@github.com>
+          author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
           title: 'generate-terraform-docs: automated action'
+          body: |
+            Update terraform docs
+          branch: ${{ steps.git-branch.outputs.generated_branch }}
+          base: main
+          signoff: true
+          delete-branch: true
 
       # TODO(ocobleseqx): https://github.com/peter-evans/enable-pull-request-automerge
 
@@ -48,4 +56,6 @@ jobs:
         if: steps.terraform-docs.outputs.num_changed == '0'
         run: |
           git checkout main
+          git push origin --delete ${{ steps.git-branch.outputs.generated_branch }}
+          git fetch -p
           git branch -D ${{ steps.git-branch.outputs.generated_branch }}
