--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -21,7 +21,7 @@ jobs:
         id: terraform-docs
         uses: terraform-docs/gh-actions@v1.0.0
         with:
-          working-dir: .,examples
+          find-dir: .
           recursive: true
           args: --sort-by required
           indention: 3
