fixup! added examples folder to generate documentation for the blueprints

--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -21,9 +21,7 @@ jobs:
         id: terraform-docs
         uses: terraform-docs/gh-actions@v1.0.0
         with:
-          working-dir: .,examples
-          recursive: true
-          recursive-path: modules
+          find-dir: .
           args: --sort-by required
           indention: 3
           git-push: "false"
